Организовать виджеты рабочего стола

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -13,7 +13,9 @@ BARCODE_LOOKUP_RATE_WINDOW_MS=60000
 BARCODE_LOOKUP_RATE_MAX=120
 
 # Barcode Lookup
-EAN_DB_API_KEY=your_api_key_here
+# EAN_DB_API_KEY is optional. If not provided, EANDB provider will be skipped.
+# Get a free key at https://ean-db.com if you want to use it.
+EAN_DB_API_KEY=
 EAN_DB_API_URL=https://ean-db.com/api
 BARCODE_ENABLE_OPEN_FOOD_FACTS=true
 BARCODE_ENABLE_BARCODE_LIST_RU=true
