Implement body metrics range mode

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -5,6 +5,7 @@ PORT=8080
 # Recipe Cache
 RECIPE_CACHE_TTL_SECONDS=604800
 RECIPE_CACHE_DB_PATH=data/recipe-cache.sqlite
+AI_STORE_DB_PATH=data/ai-store.sqlite
 
 # Rate Limiting
 RECIPE_FETCH_RATE_WINDOW_MS=60000
@@ -30,6 +31,7 @@ LOG_PRETTY=true
 
 # External recipe providers
 EXTERNAL_RECIPES_ENABLED=true
+RECOMMEND_V2_ENABLED=true
 EDAMAM_APP_ID=
 EDAMAM_APP_KEY=
 SPOONACULAR_API_KEY=
