--- a/backend/package.json
+++ b/backend/package.json
@@ -10,6 +10,7 @@
     "test": "node --test --import tsx test/*.test.ts",
     "test:watch": "node --test --watch --import tsx test/*.test.ts",
     "test:coverage": "vitest run --coverage",
+    "ingest:run": "node --import tsx src/ingestion/runIngestion.ts",
     "lint": "eslint src --ext .ts",
     "docker:build": "docker build -t inventory-ai-backend .",
     "docker:up": "docker-compose up -d",
